# GOIT_WEB_hw9

./: main.py  pyproject.toml
database/: models.py
database/jsons/: authors.json  quotes.json
part_1/: config.ini  connection.py  search.py  seeds.py
scraper/main/main/: pipelines.py  settings.py
scraper/main/main/spiders/: quotes.py
src/: test.py
src/main/main/spiders/: authors.py  quotes.py
